ISTO-65 Make Refset Export config branch global.